--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  wave:
+  wave: ^0.0.8
+  cloud:firestore: ^0.11.0+2
+  firebase_core: ^0.4.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
 
 # For information on the generic Dart part of this file, see the
