--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   wave: ^0.0.8
-  cloud:firestore: ^0.11.0+2
+  cloud_firestore: ^0.12.7
   firebase_core: ^0.4.0+1
 
 dev_dependencies:
